# Qt-Client-Server-Chat

./: README.md
Client/: CMakeLists.txt  main.cpp
Client/assets/: app.rc  assets.qrc
Client/include/: client.hpp
Client/src/: client.cpp
Server/: CMakeLists.txt  build.bat  main.cpp
Server/include/: server.hpp
Server/src/: server.cpp
